<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:id="@+id/registerUserFragment">

        <TextView
            android:id="@+id/registerUserTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile_header"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/profilePicView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addPictureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="Capture Image"
            app:layout_constraintBottom_toBottomOf="@+id/profilePictureField"
            app:layout_constraintStart_toEndOf="@+id/profilePictureField"
            app:layout_constraintTop_toTopOf="@+id/profilePictureField" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/profilePictureField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="Profile Picture:"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/countryField"
            app:layout_constraintTop_toBottomOf="@+id/countryField" />

        <ImageView
            android:id="@+id/profilePicView"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/dark_blue"
            app:hintTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/dark_blue"
            app:hintTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/TextFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name"
                android:textColor="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/heightField"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/dark_blue"
            app:hintTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Height (inches)"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/weightField"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/dark_blue"
            app:hintTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/heightField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Weight (pounds)"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/dark_blue"
            app:hintTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexRadioGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="City"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/countryField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/dark_blue"
            app:hintTextColor="@color/white"
            app:helperTextTextColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Country"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvSexField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:text="@string/sex_field"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/heightField"
            app:layout_constraintTop_toBottomOf="@+id/heightField" />

        <RadioGroup
            android:id="@+id/sexRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/tvSexField"
            app:layout_constraintStart_toEndOf="@+id/tvSexField"
            app:layout_constraintTop_toTopOf="@+id/tvSexField">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:buttonTint="@color/white"/>

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/female"
                android:textColor="@color/white"
                android:buttonTint="@color/white"/>

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>