<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />
        <item
            android:id="@+id/nav_calories"
            android:icon="@drawable/ic_calories"
            android:title="Fitness Goals" />
        <item android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_bmi"
            android:title="Calculate BMI"
            />
        <item android:id="@+id/step_counter"
            android:icon="@drawable/ic_baseline_fitness_center_24"
            android:title="Daily Steps"
            />
    </group>

</menu>